feat: Добавить тесты